[feature] THORFi Lending #check-lint-warning
